background fix on ios

--- a/css/custom.css
+++ b/css/custom.css
@@ -102,9 +102,6 @@ a:hover {
 
 .background {
 	background-repeat:no-repeat;
-	-webkit-background-size: cover; 	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
 	background-attachment: fixed;
 	background-position:50% 50%; /* custom */
 	/* background-position:50% 50%\9 */ !important; /* ie8 graceful degradation */
@@ -148,7 +145,6 @@ section {
 .not-fullscreen {
 	height:50%;
 }
-
 
 
 /* MODAL
